--- a/docker-tags/action.yml
+++ b/docker-tags/action.yml
@@ -94,7 +94,7 @@ runs:
       shell: bash
       run: |
         echo "$(date +'%d %B %Y - %k:%M') - GetToken: Fetching Token from container registry: ${{ env.AUTH_SERVICE }}"
-        curl -s -X GET -u "${{ inputs.docker_username }}":"${{ inputs.docker_password }}" "https://${{ env.AUTH_DOMAIN }}/token?service=${{ env.AUTH_SERVICE }}&scope=${{ env.AUTH_SCOPE }}&offline_token=${{ env.AUTH_OFFLINE_TOKEN }}&client_id=${{ env.AUTH_CLIENT_ID }}
+        curl -s -X GET -u "${{ inputs.docker_username }}":"${{ inputs.docker_password }}" "https://${{ env.AUTH_DOMAIN }}/token?service=${{ env.AUTH_SERVICE }}&scope=${{ env.AUTH_SCOPE }}&offline_token=${{ env.AUTH_OFFLINE_TOKEN }}&client_id=${{ env.AUTH_CLIENT_ID }}"
         TOKEN=$(curl -s -X GET -u "${{ inputs.docker_username }}":"${{ inputs.docker_password }}" "https://${{ env.AUTH_DOMAIN }}/token?service=${{ env.AUTH_SERVICE }}&scope=${{ env.AUTH_SCOPE }}&offline_token=${{ env.AUTH_OFFLINE_TOKEN }}&client_id=${{ env.AUTH_CLIENT_ID }}" | jq -r '.token')
         echo "TOKEN=${TOKEN}" >> $GITHUB_ENV 
         echo "Token portion: ${TOKEN:0:10}"        
