--- a/docker-tags/action.yml
+++ b/docker-tags/action.yml
@@ -98,7 +98,7 @@ runs:
         echo "${TEST}"
         echo "${TEST@Q}"
         HEADER=$(echo -n ${{ inputs.docker_username }}:${{ inputs.docker_password }} | base64)
-        echo HEADER
+        echo $HEADER
         
 
         # TOKEN=$(curl -s -X GET -u "${{ inputs.docker_username }}":"${{ inputs.docker_password }}" "https://${{ env.AUTH_DOMAIN }}/token?service=${{ env.AUTH_SERVICE }}&scope=${{ env.AUTH_SCOPE }}&offline_token=${{ env.AUTH_OFFLINE_TOKEN }}&client_id=${{ env.AUTH_CLIENT_ID }}" | jq -r '.token')
