Fix new param description

--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -184,7 +184,7 @@ inputs:
     required: false
     default: 'ci.startup.sh'
   ci_build_script:
-    description: 'Build script to use in-lieu of docker-compose up'
+    description: 'Build script to use in-lieu of docker build'
     required: false
     default: 'ci.build.sh'
   ci_postrun_script:
