--- a/dependencies-check-java/action.yml
+++ b/dependencies-check-java/action.yml
@@ -2,9 +2,10 @@ name: Check Java dependencies
 description: Add a comment on the PR with updates and licenses compliance for Java dependencies
 
 inputs:
-  gist_license_allowlist:
-    description: 'List of allowed licenses'
+  license_allowlist:
+    description: 'File containing a list of allowed licenses'
     required: true
+    default: "license-allowlist-java.txt"
   github_token:
     description: 'Github token'
     required: true
@@ -88,26 +89,17 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
 
-    - name: Get Gist
-      id: get
-      if: always()
-      uses: andymckay/get-gist-action@0.1
-      with:
-        gistURL: ${{ inputs.gist_license_allowlist }}
-
     - name: Prepare licenses allowlist
       shell: bash
       id: run
       run: |
-        echo "ALLOWLIST=$(cat ${{ steps.get.outputs.file }})" >> $GITHUB_ENV
+        echo "ALLOWLIST=$(cat ${{ inputs.license_allowlist }})" >> $GITHUB_ENV
 
     - name: Check licenses
       shell: bash
       run: |
         mvn license:add-third-party -DlinkOnly=true -Dlicense.excludeTransitiveDependencies=true -Dlicense.excludedScopes=test,provided -Dlicense.excludedTypes=war,pom -Dlicense.excludedGroups="^org\.jahia\..*" --no-transfer-progress
         grep -Eiv "^List|^The project has no dependencies|.*Jahia|${ALLOWLIST}" target/generated-sources/license/THIRD-PARTY.txt > bad-licenses.txt || true
-        wc -l <bad-licenses.txt
-        wc -w <bad-licenses.txt
         if [[ $(wc -l <bad-licenses.txt) -gt 0 && $(wc -w <bad-licenses.txt) -gt 0 ]]; then
           echo "LICENSE_DIFF_STATUS=1" >> $GITHUB_ENV
           echo "## Maven licenses analysis" >> .github/workflows/bad-licenses.md
