--- a/dependencies-check-javascript/action.yml
+++ b/dependencies-check-javascript/action.yml
@@ -4,8 +4,6 @@ description: Add a comment on the PR with updates and licenses compliance for Ja
 inputs:
   license_allowlist:
     description: 'List of allowed licenses'
-    required: true
-    default: '${{ github.action_path }}/license-allowlist-java.txt'
   github_token:
     description: 'Github token'
     required: true
@@ -30,7 +28,11 @@ runs:
       id: run
       shell: bash
       run: |
-        echo "ALLOWLIST=$(cat ${{ inputs.license_allowlist }})" >> $GITHUB_ENV
+        if [[ -z "${{ inputs.license_allowlist }}" ]]; then
+          echo "ALLOWLIST=$(cat ${{ github.action_path }}/license-allowlist-java.txt)" >> $GITHUB_ENV
+        else
+          echo "ALLOWLIST=$(cat ${{ inputs.license_allowlist }})" >> $GITHUB_ENV
+        fi
 
     - name: Check licenses
       shell: bash
