TECH-1028: Fix PR feedbacks

--- a/publish/action.yml
+++ b/publish/action.yml
@@ -34,11 +34,10 @@ runs:
 
     - name: Build package
       shell: bash
-      run: mvn -B -s ${{ inputs.mvn_settings_filepath }} clean deploy
-      id: artifact_build
+      run: mvn -B -s ${{ inputs.mvn_settings_filepath }} clean deploy | tee mvnLogs.txt
 
     - name: Direct link location of the Artifact
       shell: bash
       run: |
-        EXTRACTED_NEXUS_ARTIFACT_URL=`grep -e "Uploaded.*\.jar" ${{steps.artifact_build.outputs}} | grep -v sources | sed -e 's/.*\(https.*.jar\).*/\1/g'` 
-        echo "::notice title=Artifact location (require VPN)::Artifact has been uploaded to: $EXTRACTED_NEXUS_ARTIFACT_URL"
+        EXTRACTED_NEXUS_ARTIFACT_URL=`grep -e "Uploaded.*\.jar" mvnLogs.txt | grep -v sources | sed -e 's/.*\(https.*.jar\).*/\1/g'` 
+        echo "::notice title=Snapshot module location::Artifact has been uploaded to: $EXTRACTED_NEXUS_ARTIFACT_URL"
